# compilation-box

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
app/: main.py  models.py
app/api/: main.py
app/api/routes/: anime.py  animes.py  employee.py  episode.py  genre.py  role.py  shows.py  studio.py  test.py  user.py
app/commands/: scrap-page.py
app/core/: config.py  db.py  security.py
app/migrations/: 20250404190555_migration_name.py
app/models/: Employee.py  Episode.py  Movie.py  Role.py  Season.py  TvShow.py  User.py  __init__.py  anime.py  employee.py  episode.py  genre.py  models.py  movie.py  role.py  roleEnum.py  season.py  studio.py  tvShow.py  user.py
app/routers/: __init__.py  animes.py  authentication.py  movies.py  shows.py
app/services/: __init__.py  anime.py  database.py  movie.py  show.py
app/settings/: config.py  database.py
app/utils/: constants.py  logger.py  security.py
