[project]
name = "compilation-box"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beanie==1.29.0",
    "beautifulsoup4==4.12.3",
    "fastapi[standard]==0.115.12",
    "passlib[bcrypt]==1.7.4",
    "pydantic-settings==2.8.1",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.18",
    "requests==2.32.3",
]
